...
            android:title="Overview" />
        <item
            android:id="@+id/nav_mng_bgt"
            android:icon="@drawable/edit"
            android:title="Manage Budgets" />
        <item
            android:id="@+id/nav_mng_cat"
            android:icon="@drawable/edit"
            android:title="Manage Categories" />
        <item
            android:id="@+id/nav_mng_trans"
            android:icon="@drawable/edit"
            android:title="Manage Transactions" />
        <item
            android:id="@+id/nav_ana_cat"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="My Behavior" />
...
