<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/add_trans_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Transaction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/trans_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date" />

        <TextView
            android:id="@+id/trans_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="48dp"
            android:layout_toEndOf="@+id/trans_date_button"
            android:text="2017-10-10" />

        <Switch
            android:id="@+id/auto_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:text="Auto" />
    </RelativeLayout>

    <Spinner
        android:id="@+id/bgt_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:entries="@array/bgt_array"
        android:prompt="@string/bgt_prompt" />

    <Spinner
        android:id="@+id/cat_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:entries="@array/cat_array"
        android:prompt="@string/cat_prompt" />

    <EditText
        android:id="@+id/trans_amt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Enter amount here"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/trans_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Note" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="auto"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_menu_camera" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:clickable="true"
            android:focusable="auto"
            app:elevation="0dp"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar_recept_scanning"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>

